# aster

./: .bazelrc  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MFMA_OVERLAP_HAZARD.md  MODULE.bazel  README.bazel.md  README.md  README_control_vs_automation_tradeoffs.md  README_devs.md  README_hotaisle.md  pyproject.toml  requirements-amd-gfx120X-all.txt  requirements-amd-gfx94X.txt  requirements.txt
contrib/cpu/: CMakeLists.txt  README.md
contrib/cpu/include/: CMakeLists.txt
contrib/cpu/lib/: CMakeLists.txt
contrib/cpu/lib/Dialect/: CMakeLists.txt
contrib/cpu/lib/Registration/: CMakeLists.txt  Registration.cpp
contrib/cpu/python/aster_cpu/: __init__.py
contrib/cpu/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
contrib/cpu/test/integration/: fma.mlir  tdpbf16ps.mlir  test_fma_e2e.py  test_tdpbf16ps_e2e.py
contrib/cpu/tools/: CMakeLists.txt
contrib/cpu/tools/aster-cpu-opt/: CMakeLists.txt  aster-cpu-opt.cpp
contrib/cpu/tools/aster-cpu-translate/: CMakeLists.txt  aster-cpu-translate.cpp
contrib/mlir-air/: CMakeLists.txt  README.md  conftest.py
contrib/mlir-air/lib/: AirToAMDGCN.cpp  ConvertLinalgToAMDGCN.cpp  ConvertMemSpaceToAMDGCN.cpp  ConvertToAMDGCNLibraryCalls.cpp  Init.cpp  Pipelines.cpp  PromoteAllocsToFuncArgs.cpp
contrib/mlir-air/test/: air-to-amdgcn-matmul-padded-transform.mlir  air-to-amdgcn-matmul-padded.mlir  air-to-amdgcn-matmul-transform.mlir  air-to-amdgcn-matmul.mlir  linalg-to-amdgcn.mlir
contrib/mlir-air/test/integration/: test_air_matmul_e2e.py  test_linalg_matmul_e2e.py
contrib/mlir-air/tools/: mlir-air-opt.cpp
contrib/stinkytofu/: CMakeLists.txt  COMMIT  README.md  conftest.py
contrib/stinkytofu/cmake/: ClangTidy.cmake
contrib/stinkytofu/compat/linux/: limits.h
contrib/stinkytofu/fake_comgr/: amd_comgrConfig.cmake  amd_comgrConfigVersion.cmake  stub.c
contrib/stinkytofu/fake_comgr/amd_comgr/: amd_comgr.h
contrib/stinkytofu/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  roundtrip-minimal.stir  test_minimal_gemm_gfx1250_pipelined.py
lib/: CMakeLists.txt  Init.cpp
lib/API/: API.cpp  CMakeLists.txt
lib/Analysis/: CMakeLists.txt  ConstantMemoryOffsetAnalysis.cpp  DPSAliasAnalysis.cpp  DPSAnalysis.cpp  DependencyAnalysis.cpp  InterferenceGraph.cpp  LivenessAnalysis.cpp  MemoryDependenceAnalysis.cpp  RangeAnalysis.cpp  RegisterConstraints.cpp  ThreadUniformAnalysis.cpp  ValueProvenanceAnalysis.cpp  VariableAnalysis.cpp
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  CodeGenPass.cpp  Legalizer.cpp  MemOpsLegalization.cpp  Pipelines.cpp  TypeConverter.cpp  VectorLegalization.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/AMDGCN/: CMakeLists.txt
lib/Dialect/AMDGCN/Analysis/: AllocaAliasAnalysis.cpp  BufferAnalysis.cpp  CMakeLists.txt  HazardAnalysis.cpp  (+9 more)
lib/Dialect/LSIR/: CMakeLists.txt
lib/IR/: CMakeLists.txt  InstImpl.cpp  Operand.cpp  ParsePrintUtils.cpp
lib/Interfaces/: CMakeLists.txt  DependentOpInterface.cpp  GPUFuncInterface.cpp  InstOpInterface.cpp  InstOpInterfaces.cpp  MemorySpaceConstraints.cpp  ModuleOpInterface.cpp  OperandBundleOpInterface.cpp  RegisterType.cpp  ResourceInterfaces.cpp  SchedInterfaces.cpp  TargetAttr.cpp  UpstreamModelsImpl.cpp  VerifierAttr.cpp
lib/Support/: CMakeLists.txt  Graph.cpp  IntEquivalenceClasses.cpp  Lexer.cpp
lib/Transforms/: ApplySched.cpp  CFGSimplification.cpp  CMakeLists.txt  CanonicalizePtrs.cpp  ConvertSCFControlFlow.cpp  DecomposeAffineApply.cpp  DecomposeMemrefIterArgs.cpp  FactorizeAffineExpr.cpp  ForwardStoreToLoad.cpp  LDSMultibufferPrep.cpp  LoopUnroll.cpp  MemRefUtils.cpp  OpScheduling.cpp  OptimizeArith.cpp  PromoteLoopCarriedMemrefs.cpp  PropagateConstantOffsets.cpp  ReplaceConstantGPUDims.cpp  SCFPipelineAsterSched.cpp  SCFRotate.cpp  SimplifyAllocaIterArgs.cpp  ToIntArith.cpp  Untitled  Utils.cpp
llvm/: CMakeLists.txt  LLVM_COMMIT
python/: CMakeLists.txt
python/aster/: compilation.py  execution.py  hip.py  logging.py  pass_pipelines.py  pass_pipelines_stinkytofu.py  test_pass_pipelines.py  testing.py  utils.py
python/aster/compiler/: __init__.py  compile.py  core.py  metadata.py
python/aster/core/: __init__.py  device.py  target.py
python/aster/dialects/: AMDGCNOps.td  LSIROps.td  LayoutOps.td  PatternOps.td  PtrOps.td  amdgcn.py  api.py  kernel_builder.py  kernel_builder_with_layouts.py  layout.py  lsir.py  pattern.py  ptr.py
python/aster/emitter/: README.md  __init__.py  arith_emitter.py  context.py  core.py  emitc_emitter.py  escape.py  func_emitter.py  pattern_emitter.py  rewrite.py  scf_emitter.py  scope.py  semantic.py  table.py  template.py  types.py
python/aster/execution/: __init__.py  core.py  execution.py  flush_llc.py  helpers.py  hip.py  utils.py
python/aster/layout/: __init__.py  algebra.py  codegen.py  int_tuple.py  tensor.py  values.py
python/aster/testing/: __init__.py
python/aster/utils/: __init__.py  capsule.py  env.py  logging.py
python/lib/: RuntimeModule.cpp  amdgcn.cpp  hip.h  site_init.cpp
python/test/: test_copy_examples.py  test_elem_layout_bounds.py  test_emitter.py  test_kernel_builder.py  test_layout_codegen.py  test_simple_fusion_example.py
python/test/integration/: test_copy_with_layout.py  test_layout_copy_e2e.py  test_layout_lds_copy_e2e.py  test_layout_mfma_e2e.py  test_lds_copy_with_layout.py  test_stress_test_ilp.py  test_tiledmma_kernel_e2e.py
test/python/cdna/: CMakeLists.txt  test_asm.py  test_cdna.py
tools/amdgcn-tblgen/: CMakeLists.txt  Dump.cpp  InstAsmFormat.cpp  InstAsmPrinterGen.cpp  InstBindings.cpp  InstCommon.cpp  InstCommon.h  InstGen.cpp  InstMethodsGen.cpp  Instruction.cpp  Instruction.h  OpGen.cpp  README.md  main.cpp
tools/aster-lsp-server/: CMakeLists.txt  aster-lsp-server.cpp
tools/aster-opt/: CMakeLists.txt  aster-opt.cpp
tools/aster-pdl/: CMakeLists.txt
tools/aster-pdl/lib/: pdl.cpp  site_init.cpp
tools/aster-translate/: CMakeLists.txt  aster-translate.cpp
unittests/: CMakeLists.txt
unittests/Support/: CMakeLists.txt  GraphTest.cpp
(+1248 files in other folders)
