# pyproject.toml - Build and tool configuration for the aster project.
#
# Editable install (local development):
#   CMAKE_PREFIX_PATH=<llvm-install>/lib/cmake pip install -e .
#   CMAKE_PREFIX_PATH=<llvm-install>/lib/cmake pip install -e .[dev]
#
# Wheel build (via cibuildwheel, requires LLVM tarball):
#   bash tools/pkgs/aster/build.sh --llvm-tarball=<path-to-llvm.tar.gz>

[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.9,<3.0", "cmake>=3.31.6", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "aster"
version = "0.42.0"
requires-python = ">=3.11"
description = "ASTER MLIR-based compiler Python bindings"
license = { text = "LLVM Apache-2.0" }
dependencies = [
  "nanobind>=2.9,<3.0",
  "PyYAML>=5.4.0,<7.0",
  "typing_extensions>=4.12.2",
  "numpy>=2.1.0,<2.2.0",
  "ml_dtypes>=0.5.0,<0.7.0",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "lit>=18.1.7",
  "black",
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pyright",
]

[tool.scikit-build]
cmake.build-type = "Release"
build.verbose = true
# No pure-Python packages to collect; all content is placed by cmake --install.
wheel.packages = []

[tool.scikit-build.cmake.define]
ASTER_ENABLE_PYTHON      = "ON"
ASTER_ENABLE_UNIT_TESTS  = "OFF"
MLIR_BINDINGS_PYTHON_NB_DOMAIN = "aster"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip  = "*-musllinux*"
# Runs once per container: extracts the LLVM tarball and installs build tools.
before-all = "bash {project}/tools/pkgs/aster/before-all.sh"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# before-all.sh symlinks /opt/llvm -> <extracted>/lib/cmake so CMake's
# find_package() resolves /opt/llvm/<PackageName>/Config.cmake.
[tool.cibuildwheel.linux.environment]
LLVM_PKG_PATH     = ".llvm-pkg.tar.gz"
CMAKE_PREFIX_PATH = "/opt/llvm"
CC                = "clang"
CXX               = "clang++"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

# before-all.sh symlinks ${HOME}/.llvm-pkg -> <extracted>/lib/cmake.
[tool.cibuildwheel.macos.environment]
LLVM_PKG_PATH     = ".llvm-pkg.tar.gz"
CMAKE_PREFIX_PATH = "{homedir}/.llvm-pkg"

[tool.pytest.ini_options]
testpaths = ["test", "mlir_kernels", "contrib", "python"]
addopts = "--import-mode=importlib"
pythonpath = ["contrib", "contrib/kittens/test"]

[tool.ruff]
# 88 is black's default; preserved when switching from black to ruff.
line-length = 88

[tool.ruff.lint.per-file-ignores]
# lit config files: `config` is injected by the lit runtime, not a real undefined name.
"test/lit.cfg.py" = ["F821"]
"test/Unit/lit.cfg.py" = ["F821"]
"test/lit.site.cfg.py.in" = ["F821"]
"test/Unit/lit.site.cfg.py.in" = ["F821"]
# Dialect wrappers re-export from generated code via star imports.
"python/aster/dialects/amdgcn.py" = ["F401", "F403", "F405", "E402"]
"python/aster/dialects/lsir.py" = ["F403", "F405"]
"python/aster/dialects/ptr.py" = ["F403"]
# __init__.py and utility modules re-export intentional public API.
"python/aster/compiler/__init__.py" = ["F401"]
"python/aster/layout/__init__.py" = ["F401"]
"mlir_kernels/nanobenchmarks/utils.py" = ["F401"]

[tool.pyrefly]
search_path = ["build/python_packages", "contrib", "contrib/kittens/test"]
project_includes = ["build/python_packages/aster/**/*.py"]
project_excludes = ["**/node_modules", "**/__pycache__"]
